--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>short</title>
+    <link rel="stylesheet" href="astronomia_moderna.css">
+</head>
+<body>
+    <header>
+        
+    </header>
+    <main>
+        <article>
+            
+            <a href="" target="_blank">Leer más en Wikipedia</a>
+        </article>
+    </main>
+</body>
+</html>
