--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <article>
             
-            <a href="" target="_blank">Leer más en Wikipedia</a>
+            <a href="https://raw.githubusercontent.com/gromorg666/html/refs/heads/main/astronomia_moderna.html" target="_blank">Leer más en Wikipedia</a>
         </article>
     </main>
 </body>
