--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>short</title>
-    <link rel="stylesheet" href="astronomia_moderna.css">
+    <title>Mi Página de Astronomía</title>
 </head>
 <body>
-    <header>
-        
-    </header>
-    <main>
-        <article>
-            
-            <a href="https://raw.githubusercontent.com/gromorg666/html/refs/heads/main/astronomia_moderna.html" target="_blank">Leer más en Wikipedia</a>
-        </article>
-    </main>
+    <h1>Bienvenido a mi página de astronomía</h1>
+    <p>Para más información, visita la <a href="https://github.com/gromorg666/html/blob/main/astronomia_moderna.html">página de astronomía moderna</a>.</p>
 </body>
 </html>
